[gd_scene load_steps=15 format=3 uid="uid://b8rn7vwnv4rum"]

[ext_resource type="Script" path="res://scenes/minigames/bug_invaders/bug_invaders_script.gd" id="1_qmq0e"]
[ext_resource type="PackedScene" uid="uid://dq3nphcyf63wm" path="res://scenes/bug.tscn" id="2_57jjv"]
[ext_resource type="PackedScene" uid="uid://mxfibfbf8tns" path="res://scenes/speedest_bug.tscn" id="3_v5py0"]
[ext_resource type="Texture2D" uid="uid://ev3x01t60fa7" path="res://assets/Bug_Invaders_Assets/background (1204 x 540 px).png" id="4_cbsm3"]
[ext_resource type="AudioStream" uid="uid://cdj4e2rxnrfm1" path="res://sounds/spray.mp3" id="16_fntgp"]
[ext_resource type="AudioStream" uid="uid://ccd6twuqcfmb2" path="res://sounds/hit.mp3" id="17_xqfk5"]
[ext_resource type="PackedScene" uid="uid://c0najr07e3fsp" path="res://scenes/hud.tscn" id="19_hxevr"]
[ext_resource type="Script" path="res://scripts/transition.gd" id="20_k3jvn"]
[ext_resource type="PackedScene" uid="uid://cnv86s1qb4u7a" path="res://prefab/comfirm_exit.tscn" id="21_71ouw"]
[ext_resource type="PackedScene" uid="uid://cxgf3ic563c1i" path="res://scenes/game_over_screen.tscn" id="22_1nwx1"]
[ext_resource type="PackedScene" uid="uid://dj8crjcbpsbi2" path="res://scenes/player.tscn" id="23_wec7n"]

[sub_resource type="Animation" id="Animation_xd0w6"]
resource_name = "fade_in"
length = 1.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.3)
}

[sub_resource type="Animation" id="Animation_qtmtm"]
resource_name = "fade_out"
length = 1.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfcqe"]
_data = {
"fade_in": SubResource("Animation_xd0w6"),
"fade_out": SubResource("Animation_qtmtm")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_qmq0e")
bug_scenes = Array[PackedScene]([ExtResource("2_57jjv"), ExtResource("3_v5py0")])

[node name="BackgroundImage" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 540.0
texture = ExtResource("4_cbsm3")

[node name="SFX" type="Node2D" parent="."]

[node name="Shoot" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("16_fntgp")

[node name="Hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_xqfk5")

[node name="UILayer" type="CanvasLayer" parent="." groups=["ui_layer"]]
process_mode = 3

[node name="HUD" parent="UILayer" instance=ExtResource("19_hxevr")]
process_mode = 3
offset_top = 2.0
offset_right = 68.0
offset_bottom = -164.0

[node name="transition" type="Control" parent="UILayer"]
process_mode = 3
z_index = 3
layout_mode = 3
anchors_preset = 0
offset_right = 542.0
offset_bottom = 705.0
script = ExtResource("20_k3jvn")

[node name="ColorRect" type="ColorRect" parent="UILayer/transition"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 541.0
offset_bottom = 708.0
color = Color(0, 0, 0, 1)

[node name="animation" type="AnimationPlayer" parent="UILayer/transition"]
libraries = {
"": SubResource("AnimationLibrary_kfcqe")
}

[node name="Comfirm_Exit" parent="UILayer" instance=ExtResource("21_71ouw")]
position = Vector2(202, 147)

[node name="GameOverScreen" parent="UILayer" instance=ExtResource("22_1nwx1")]
offset_left = 93.72
offset_top = 181.0
offset_right = 111.0
offset_bottom = 188.12

[node name="BugSpwanTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource("23_wec7n")]
position = Vector2(232, -68)

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(288, 394)

[node name="ShootContainer" type="Node2D" parent="."]

[node name="BugContainer" type="Node2D" parent="."]
position = Vector2(218, 26)

[connection signal="pressed" from="UILayer/HUD/TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
[connection signal="timeout" from="BugSpwanTimer" to="." method="_on_bug_spwan_timer_timeout"]

[editable path="UILayer/HUD"]
